# CachyOS-Welcome

./: Cargo.toml  meson.build
data/pages/de/: release
data/pages/en/: release
data/pages/ru/: release
i18n/by/: cachyos_hello.ftl
i18n/cs/: cachyos_hello.ftl
i18n/de/: cachyos_hello.ftl
i18n/en/: cachyos_hello.ftl
i18n/fr/: cachyos_hello.ftl
i18n/it/: cachyos_hello.ftl
i18n/nl/: cachyos_hello.ftl
i18n/pl/: cachyos_hello.ftl
i18n/ru/: cachyos_hello.ftl
i18n/sk/: cachyos_hello.ftl
i18n/tr/: cachyos_hello.ftl
i18n/zh-CN/: cachyos_hello.ftl
src/: main.rs  pages.rs  utils.rs
src/scripts/: terminal-helper
ui/: cachyos-hello.glade
