[package]
name = "cachyos-hello"
version = "0.15.4"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2021"

[dependencies]
alpm = { default-features = false, version = "4" }
alpm-utils = { features = ["conf"], default-features = false, version = "4" }
pacmanconf = "3"

subprocess = "0.2"
once_cell = { default-features = false, version = "1.19" }
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
gtk = { version = "0.18", default-features = false }
gio = { version = "0.20", default-features = false }
gdk-pixbuf = "0.20"
glib = { default-features = false, version = "0.20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
unic-langid = "0.9"
phf = { version = "0.11", features = ["macros"], default-features = false }
chwd = { git = "https://github.com/CachyOS/chwd", rev = "3b288ba0d86b1d078057eb7f3d50b562959fd17a", version = "1.11.0" }

[build-dependencies]
anyhow = "1"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
